# git-cli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  UX_IMPROVEMENTS.md  config.example.toml  emojis.example.json  emojis.json  install.sh  test_change.txt  uninstall.sh
.github/workflows/: ci.yml
src/: emojis.rs  errors.rs  lib.rs  main.rs  utils.rs  validation.rs
src/config/: mod.rs
src/git/: mod.rs
src/ui/: mod.rs
tests/: integration_tests.rs
